--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 <!-- Scripts -->
 
 <script src="js/animations.js"></script>
+<script src="js/MilkyWay.js"></script>
 
 <script>
   // Simple toggle for mobile menu
