--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       </div>
       <div class="about-content">
         <div class="about-text">
-          <p class="about-description">Programador Full Stack Junior con experiencia en tecnologías web y multiplataforma. Actualmente finalizo el Grado Superior en Desarrollo de Aplicaciones Multiplataforma en CIFP César Manrique mientras realizo prácticas como programador en CIAC S.L.</p>
-          <p class="about-description">Domino diferentes lenguajes y frameworks: HTML5/CSS3, JavaScript, Java, .NET, Flutter y Xamarin (a medias jaja). Mi formación en ingeniería complementa mis habilidades de programación con un enfoque analítico y resolutivo.</p>
+          <p class="about-description">Programador Full Stack Junior con experiencia en tecnologías web y multiplataforma. Actualmente finalizo el Grado Superior en Desarrollo de Aplicaciones Multiplataforma en CIFP César Manrique mientras realizo prácticas como programador en <a href="http://ciacsl.com/"><b>CIAC S.L.</b></a></p>
+          <p class="about-description">Domino diferentes lenguajes y frameworks: HTML5/CSS3, JavaScript, Java, .NET, Flutter y Xamarin. Mi formación en ingeniería complementa mis habilidades de programación con un enfoque analítico y resolutivo.</p>
         </div>
 
         <div class="skills-grid">
           <div class="skill-category">
             <h3 class="skill-category-title">Desarrollo web</h3>
-            <p class="skill-description">Me especializo en crear sitios web visualmente atractivos y funcionales utilizando HTML5/CSS3 y JavaScript. Mi experiencia incluye la actualización completa de la web corporativa de CIAC S.L.</p>
+            <p class="skill-description">Me especializo en crear sitios web visualmente atractivos y funcionales utilizando HTML5/CSS3 y JavaScript. Mi experiencia incluye la actualización completa de la web corporativa de <a href="http://ciacsl.com/"><b>CIAC S.L.</b></a></p>
           </div>
 
           <div class="skill-category">
@@ -62,7 +62,7 @@
 
           <div class="skill-category">
             <h3 class="skill-category-title">Desarrollo backend</h3>
-            <p class="skill-description">Experiencia en el desarrollo de soluciones backend utilizando Java y .NET. He participado en el mantenimiento de aplicaciones de gestión de almacenes para PDA en CIAC S.L.</p>
+            <p class="skill-description">Experiencia en el desarrollo de soluciones backend utilizando Java y .NET. He participado en el mantenimiento de aplicaciones de gestión de almacenes para PDA en <a href="http://ciacsl.com/"><b>CIAC S.L.</b></a></p>
           </div>
 
           <div class="skill-category">
@@ -76,10 +76,10 @@
           <div class="experience-item">
             <div class="experience-header">
               <h4 class="experience-role">Programador Full Stack (Prácticas)</h4>
-              <p class="experience-company">CIAC S.L.</p>
+              <p class="experience-company"><a href="http://ciacsl.com/"><b>CIAC S.L.</b></a></p>
               <p class="experience-duration">Feb 2025 - Actualidad</p>
             </div>
-            <p class="experience-description">Realicé mantenimiento a la aplicacion de gestión de almacenes para PDA escrita en Xamarin. Actualicé desde cero la web de la empresa en HTML5/CSS3 y JavaScript. Realizé pruebas de proyectos no finalizados en Flutter.</p>
+            <p class="experience-description">Realicé mantenimiento a la aplicacion de gestión de almacenes para PDA escrita en Xamarin. Actualicé desde cero la web de la empresa <a href="http://ciacsl.com/"><b>CIAC S.L.</b></a> en HTML5/CSS3 y JavaScript. Realizé pruebas de proyectos no finalizados en Flutter.</p>
           </div>
         </div>
 
@@ -88,17 +88,17 @@
           <div class="education-list">
             <div class="education-item">
               <h4 class="education-degree">Técnico Superior en Desarrollo de Aplicaciones Multiplataforma</h4>
-              <p class="education-school">CIFP Cesar Manrique</p>
+              <p class="education-school"><a href="https://www3.gobiernodecanarias.org/medusa/edublog/cifpcesarmanrique/"><b>CIFP Cesar Manrique</b></a></p>
               <p class="education-duration">Sep 2022 - Actualidad</p>
             </div>
             <div class="education-item">
               <h4 class="education-degree">Grado en Ingeniería Mecánica</h4>
-              <p class="education-school">Universidad de Burgos</p>
+              <p class="education-school"><a href="https://www.ubu.es/"><b>Universidad de Burgos</b></a></p>
               <p class="education-duration">Sep 2019 - Feb 2021</p>
             </div>
             <div class="education-item">
               <h4 class="education-degree">Bachillerato</h4>
-              <p class="education-school">I.E.S. ADEJE</p>
+              <p class="education-school"><a href="https://www3.gobiernodecanarias.org/medusa/edublog/iesadeje/"><b>IES Adeje</b></a></p>
               <p class="education-duration">Sep 2017 - Jun 2019</p>
             </div>
           </div>
