--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 <section id="about" class="about">
   <div class="container about-container">
     <h2 class="section-title">Sobre mí</h2>
-    <div class="about-grid">
-      <div class="about-image-container">
-        <img src="img/KirillAbout.jpeg" alt="Kirill Shepel" class="about-image" loading="lazy">
+    <div class="about-content">
+      <div class="about-text">
+        <p class="about-description">Programador Full Stack Junior con experiencia en tecnologías web y multiplataforma. Actualmente finalizo el Grado Superior en Desarrollo de Aplicaciones Multiplataforma en CIFP César Manrique mientras realizo prácticas como programador en <a href="http://ciacsl.com/"><b>CIAC S.L.</b></a></p>
+        <p class="about-description">Domino diferentes lenguajes y frameworks: HTML5/CSS3, JavaScript, Java, .NET, Flutter y Xamarin. Mi formación en ingeniería complementa mis habilidades de programación con un planteamiento resolutivo. Soy trabajador de equipo y sobre todo me enfoco en seguir aprendiendo nuevas tecnologías y metodologías. ¡Gracias!</p>
       </div>
       <div class="about-content">
         <div class="about-text">
